Adding refresher consent to sheets pulled from codebook

--- a/config/ppi-codebook-prerelease.json
+++ b/config/ppi-codebook-prerelease.json
@@ -12,7 +12,8 @@
     "EHRConsentPII": "33202640",
     "OverallHealth": "448841041",
     "Lifestyle": "1838424427",
-    "TheBasics": "551947635"
+    "TheBasics": "551947635",
+    "RefresherConsent": "1634148804"
   },
   "sheetsToIgnore": {
     "FamilyHistory": "337657447",
