Adding san diego blood bank scheduling module

--- a/config/ppi-codebook-prerelease.json
+++ b/config/ppi-codebook-prerelease.json
@@ -13,7 +13,8 @@
     "OverallHealth": "448841041",
     "Lifestyle": "1838424427",
     "TheBasics": "551947635",
-    "RefresherConsent": "1634148804"
+    "RefresherConsent": "1634148804",
+    "SanDiegoBloodBankScheduling": "245111633"
   },
   "sheetsToIgnore": {
     "FamilyHistory": "337657447",
