--- a/config/ppi-codebook-prerelease.json
+++ b/config/ppi-codebook-prerelease.json
@@ -14,7 +14,13 @@
     "Lifestyle": "1838424427",
     "TheBasics": "551947635",
     "RefresherConsent": "1634148804",
-    "SanDiegoBloodBankScheduling": "245111633"
+    "SanDiegoBloodBankScheduling": "245111633",
+    "EMSIScheduling":"738881659",
+    "QTCQuestScheduling": "1971013229",
+    "PPIModuleFeedback" : "1808249928",
+    "PostPMBFeedback" : "1174531030",
+    "GeneralFeedback" : "1055762876",
+    "HPOSitePairing" : "402517060"
   },
   "sheetsToIgnore": {
     "FamilyHistory": "337657447",
